--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="block"></div>
+    <div class="gamereset">
+        КІНЕЦЬ ГРИ
+    </div>
     <script src="./js/main.js"></script>
 </body>
 </html>
